整合恐怖实体动画、三阶段返工体与终端重构
通过 Blockbench MCP 细化全部可见实体并接入运行时动画。重做 HIM 材质、风暴触手与攻击特效，匹配口部发射和伤害时序。

同步返工体三阶段逻辑和旧存档迁移，整合终端硬件、交互及叙事更新。加强真实客户端截图、模型契约和共享竞技场样例隔离；清理过时资源与生成缓存，保留可编辑工程及验收记录。